[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/Controls/AttackArea/AttackArea.gd" type="Script" id=1]

[sub_resource type="Animation" id=2]
resource_name = "glow"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("AttackCursor:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "go_0"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("AttackCursor:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.5, 1, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 222.909, 0 ), Vector2( 72, 0 ), Vector2( -11, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AttackCursor:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5, 0.9, 1.3, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.0980392 ), Color( 1, 1, 1, 0.945098 ), Color( 1, 1, 1, 0.945098 ), Color( 1, 1, 1, 0.141176 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "go_1"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("AttackCursor:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.5, 1.2, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 283.273, 0 ), Vector2( 72, 0 ), Vector2( -11, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AttackCursor:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5, 0.9, 1.5, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.0980392 ), Color( 1, 1, 1, 0.945098 ), Color( 1, 1, 1, 0.945098 ), Color( 1, 1, 1, 0.141176 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "go_2"
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath("AttackCursor:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.4, 1.5, 1.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 404, 0 ), Vector2( 72, 0 ), Vector2( -11, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AttackCursor:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4, 0.8, 1.8, 1.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.0980392 ), Color( 1, 1, 1, 0.945098 ), Color( 1, 1, 1, 0.945098 ), Color( 1, 1, 1, 0.141176 ) ]
}

[node name="AttackBar" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -784.0
margin_bottom = -540.0
rect_scale = Vector2( 0.575232, 0.575232 )
color = Color( 0.113725, 0.113725, 0.113725, 1 )
script = ExtResource( 1 )

[node name="AttackCursor" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0.0980392 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 222.909
margin_right = 226.909
margin_bottom = 60.0
color = Color( 0.0666667, 0, 0.870588, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/glow = SubResource( 2 )
anims/go_0 = SubResource( 3 )
anims/go_1 = SubResource( 4 )
anims/go_2 = SubResource( 1 )

[node name="AttackPeakRect" type="ColorRect" parent="."]
margin_left = 30.0
margin_right = 36.0
margin_bottom = 60.0
color = Color( 1, 1, 1, 0.188235 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
